tests/NormalTests/paczka1/fuzzy1/56517652.err
Error in line 20: VAdNadBaC S0 73,7
Error in line 16: hFT S502 59,3
Error in line 25: hFT S0 41,2
Error in line 17: qlbkF A96 77,9
Error in line 23: hFT A96 16,8
Error in line 34: S502 S0 81,2
Error in line 35: S502 S0 404,4
Error in line 33: VAdNadBaC S502 21,6
Error in line 31: qlbkF S502 30,0
